City & State Validation Logic

--- a/ML_Muhammad_Tamir.ipynb
+++ b/ML_Muhammad_Tamir.ipynb
@@ -35,8 +35,8 @@
         "id": "GmQeQ5YF8DC0"
       },
       "source": [
-        "- Pertanyaan 1\n",
-        "- Pertanyaan 2"
+        "- Negara bagian (State) mana di Brazil yang memiliki konsentrasi pelanggan tertinggi, dan bagaimana distribusi total pendapatan (revenue) di antara negara bagian tersebut?\n",
+        "- Apakah terdapat korelasi antara lama waktu pengiriman (delivery time) dengan skor ulasan (review score) yang diberikan oleh pelanggan?"
       ]
     },
     {
@@ -50,13 +50,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
       "outputs": [],
       "source": [
         "import os\n",
+        "import re\n",
         "import unicodedata\n",
         "import kagglehub\n",
         "from kagglehub import KaggleDatasetAdapter\n",
@@ -80,6 +81,15 @@
       "source": [
         "### Gathering Data"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Setup Kaggle"
+      ],
+      "metadata": {
+        "id": "KnHvCA2uHI1C"
+      }
     },
     {
       "cell_type": "code",
@@ -154,6 +164,52 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "#### Setup City & State Mapping"
+      ],
+      "metadata": {
+        "id": "rVl5xwNBHQyT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "state_mapping = {\n",
+        "    \"acre\": \"AC\",\n",
+        "    \"alagoas\": \"AL\",\n",
+        "    \"amapa\": \"AP\",\n",
+        "    \"amazonas\": \"AM\",\n",
+        "    \"bahia\": \"BA\",\n",
+        "    \"ceara\": \"CE\",\n",
+        "    \"distrito federal\":\"DF\",\n",
+        "    \"espirito santo\": \"ES\",\n",
+        "    \"goias\": \"GO\",\n",
+        "    \"maranhao\": \"MA\",\n",
+        "    \"mato grosso\": \"MT\",\n",
+        "    \"mato grosso do sul\": \"MS\",\n",
+        "    \"minas gerais\": \"MG\",\n",
+        "    \"para\": \"PA\",\n",
+        "    \"paraiba\": \"PB\",\n",
+        "    \"parana\": \"PR\",\n",
+        "    \"pernambuco\": \"PE\",\n",
+        "    \"piaui\": \"PI\",\n",
+        "    \"rio de janeiro\": \"RJ\",\n",
+        "    \"rio grande do norte\": \"RN\",\n",
+        "    \"rio grande do sul\": \"RS\",\n",
+        "    \"rondonia\": \"RO\", \"roraima\": \"RR\",\n",
+        "    \"santa catarina\": \"SC\",\n",
+        "    \"sao paulo\": \"SP\", \"sergipe\": \"SE\",\n",
+        "    \"tocantins\": \"TO\"\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "6a0qMgyQHaDs"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "FHSiqaZp8DC1"
       },
@@ -214,14 +270,86 @@
       "source": [
         "def normalize_unicode(text):\n",
         "    if isinstance(text, str):\n",
-        "        return unicodedata.normalize(\"NFKC\", text)\n",
+        "        return unicodedata.normalize(\"NFD\", text)\n",
+        "    return text\n",
+        "\n",
+        "def clean_brazilian_cities(text):\n",
+        "    if isinstance(text, str):\n",
+        "        text = text.replace('£', 'a')\n",
+        "        text = normalize_unicode(text)\n",
+        "        text = text.encode('ascii', 'ignore').decode(\"utf-8\")\n",
+        "        text = re.sub(r'[^a-zA-Z\\s]', '', text)\n",
+        "\n",
+        "        return text.lower().strip()\n",
         "    return text"
       ],
       "metadata": {
         "id": "ugN-eN1No_P6"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### City & State Validation"
+      ],
+      "metadata": {
+        "id": "1AwzeIbPIaNj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "geo_reference = customers[['customer_city', 'customer_state']].drop_duplicates()\n",
+        "def check_location(city=None, state=None):\n",
+        "    if city: city = clean_brazilian_cities(city)\n",
+        "    if state: state = state.upper()\n",
+        "\n",
+        "    if city and state:\n",
+        "        exists = not geo_reference[(geo_reference['customer_city'] == city) &\n",
+        "                                   (geo_reference['customer_state'] == state)].empty\n",
+        "        return exists\n",
+        "\n",
+        "    elif city:\n",
+        "        states = geo_reference[geo_reference['customer_city'] == city]['customer_state'].unique()\n",
+        "        return f\"{list(states)}\" if len(states) > 0 else \"Kota tidak ditemukan.\"\n",
+        "\n",
+        "    elif state:\n",
+        "        cities = geo_reference[geo_reference['customer_state'] == state]['customer_city'].unique()\n",
+        "        return f\"{list(cities[:5])}\" if len(cities) > 0 else \"State tidak ditemukan.\""
+      ],
+      "metadata": {
+        "id": "xWE6FgjoIkIb"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "check_location(city=\"São Paulo\", state=\"SP\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "naxyKcxqKAYb",
+        "outputId": "2f44a7fb-d2e2-4001-cf4d-a3c32340be3e"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -402,6 +530,9 @@
     },
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "rVl5xwNBHQyT"
+      ],
       "include_colab_link": true
     }
   },
