Better Logging When Load Dataset

--- a/ML_Muhammad_Tamir.ipynb
+++ b/ML_Muhammad_Tamir.ipynb
@@ -93,13 +93,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 41,
       "metadata": {
         "id": "zjCBk1BI8DC1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7ca61d1c-a424-4251-b993-3f9b287b8907"
+        "outputId": "2ab0ef9a-f7a2-41f2-c442-e46aca675162"
       },
       "outputs": [
         {
@@ -108,23 +108,28 @@
           "text": [
             "Using Colab cache for faster access to the 'brazilian-ecommerce' dataset.\n",
             "Using Colab cache for faster access to the 'brazilian-ecommerce' dataset.\n",
-            "Loaded olist_customers_dataset dataset\n",
             "Using Colab cache for faster access to the 'brazilian-ecommerce' dataset.\n",
-            "Loaded olist_sellers_dataset dataset\n",
             "Using Colab cache for faster access to the 'brazilian-ecommerce' dataset.\n",
-            "Loaded olist_order_reviews_dataset dataset\n",
             "Using Colab cache for faster access to the 'brazilian-ecommerce' dataset.\n",
-            "Loaded olist_order_items_dataset dataset\n",
             "Using Colab cache for faster access to the 'brazilian-ecommerce' dataset.\n",
-            "Loaded olist_products_dataset dataset\n",
             "Using Colab cache for faster access to the 'brazilian-ecommerce' dataset.\n",
-            "Loaded olist_geolocation_dataset dataset\n",
             "Using Colab cache for faster access to the 'brazilian-ecommerce' dataset.\n",
-            "Loaded product_category_name_translation dataset\n",
             "Using Colab cache for faster access to the 'brazilian-ecommerce' dataset.\n",
-            "Loaded olist_orders_dataset dataset\n",
             "Using Colab cache for faster access to the 'brazilian-ecommerce' dataset.\n",
-            "Loaded olist_order_payments_dataset dataset\n"
+            "\n",
+            "========================================================\n",
+            "TOTAL DATASET DIMUAT: 9\n",
+            "========================================================\n",
+            "1. olist_customers_dataset             |    99,441 baris\n",
+            "2. olist_geolocation_dataset           | 1,000,163 baris\n",
+            "3. olist_order_items_dataset           |   112,650 baris\n",
+            "4. olist_order_payments_dataset        |   103,886 baris\n",
+            "5. olist_order_reviews_dataset         |    99,224 baris\n",
+            "6. olist_orders_dataset                |    99,441 baris\n",
+            "7. olist_products_dataset              |    32,951 baris\n",
+            "8. olist_sellers_dataset               |     3,095 baris\n",
+            "9. product_category_name_translation   |        71 baris\n",
+            "========================================================\n"
           ]
         }
       ],
@@ -148,7 +153,16 @@
         "    )\n",
         "\n",
         "    data[key] = df\n",
-        "    print(f\"Loaded {key} dataset\")"
+        "\n",
+        "print(\"\\n\" + \"=\"*56)\n",
+        "print(f\"TOTAL DATASET DIMUAT: {len(data)}\")\n",
+        "print(\"=\"*56)\n",
+        "\n",
+        "for i, name in enumerate(sorted(data.keys()), 1):\n",
+        "    row_count = len(data[name])\n",
+        "    print(f\"{i}. {name:<35} | {row_count:>9,} baris\")\n",
+        "\n",
+        "print(\"=\"*56)"
       ]
     },
     {
