--- a/ML_Muhammad_Tamir.ipynb
+++ b/ML_Muhammad_Tamir.ipynb
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "id": "zjCBk1BI8DC1",
         "colab": {
@@ -223,7 +223,7 @@
       "metadata": {
         "id": "6a0qMgyQHaDs"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,7 +260,7 @@
       "metadata": {
         "id": "ax-3tEjc9Cj1"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +300,7 @@
       "metadata": {
         "id": "DI1r0rUEsxkD"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -410,7 +410,7 @@
       "metadata": {
         "id": "ugN-eN1No_P6"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
       "metadata": {
         "id": "xWE6FgjoIkIb"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +469,7 @@
       "metadata": {
         "id": "jNeneWKFv1lS"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +502,7 @@
       "metadata": {
         "id": "E0GN5YO8xcRc"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -536,7 +536,7 @@
         "id": "kwAzEzO3b4xb",
         "outputId": "7a563105-3f43-41e3-c0fd-136ca67540b4"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -944,7 +944,7 @@
         "id": "Oe-eFZiKv5CL",
         "outputId": "6762ea33-5db2-4fe0-cd07-c21b49065c6c"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1426,7 +1426,7 @@
         "id": "s9aL38m9qjfa",
         "outputId": "fa3f9b05-57fa-4651-cbfc-079f37df29ff"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1861,7 +1861,7 @@
         "id": "Hwrynd4Bp9U6",
         "outputId": "99031819-6374-4351-caba-84184900e1b6"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2259,7 +2259,7 @@
         "id": "-0DpHTeqqoXC",
         "outputId": "9de09ad4-170f-422f-95dd-497b26a297e3"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2708,7 +2708,7 @@
         "id": "eeI3D-nvq1LC",
         "outputId": "860ca69b-d520-48f0-fc7e-dc467c6a7a0d"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3177,7 +3177,7 @@
       "metadata": {
         "id": "ONqvTCeFWyhQ"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3319,7 +3319,7 @@
       "metadata": {
         "id": "lyCAM2n2Vz1r"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3356,7 +3356,7 @@
         "id": "WQJg4_kEQK3m",
         "outputId": "c92bed2b-8c60-41da-afa8-632d0831bed2"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3709,7 +3709,7 @@
         "id": "JfbIVtOERFbt",
         "outputId": "ff7ec202-1159-4de0-ddd1-ea51c3d6dbb6"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4028,7 +4028,7 @@
         "id": "YF-KnT6gR0Fl",
         "outputId": "e13dd82c-9f44-44d8-eefe-a5808b85531c"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4346,7 +4346,7 @@
         "id": "KZ9DO0cNSuu-",
         "outputId": "6a830cce-0a36-4235-a9d7-76cf81a2c125"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4646,7 +4646,7 @@
         "id": "DEnaTePxTwce",
         "outputId": "f753c967-01bc-40db-baec-7d21b0a25ba9"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4998,7 +4998,7 @@
         "id": "H0eE3E93U_O1",
         "outputId": "d94bf9b6-455c-4fc6-fa09-88999127d510"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5433,7 +5433,7 @@
       "metadata": {
         "id": "0Sk1k37fW7dN"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5447,7 +5447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "e9CQCZjk8DC2",
         "colab": {
@@ -5812,7 +5812,7 @@
         "id": "s-lOC1XdXN4Q",
         "outputId": "e19f8c2a-651b-49ae-8ff9-d9523e7be924"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6175,7 +6175,7 @@
         "id": "NqUkZAX_XgHV",
         "outputId": "d324f94d-c1c3-4470-f100-88e84885f3e1"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6527,8 +6527,8 @@
       "cell_type": "markdown",
       "source": [
         "**Insight:**\n",
-        "- xxx\n",
-        "- xxx"
+        "- Sao Paulo (SP) mendominasi secara absolut, baik dari sisi jumlah pelanggan maupun total revenue.\n",
+        "- Lima state teratas (SP, RJ, MG, RS, PR) menyumbang mayoritas pelanggan dan revenue, menunjukkan konsentrasi geografis yang tinggi."
       ],
       "metadata": {
         "id": "th_Lzl2Fkj9O"
@@ -6554,7 +6554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "id": "1swJUdAD8DC2"
       },
@@ -6572,7 +6572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "id": "Go0lCsvO8DC2"
       },
@@ -6605,7 +6605,7 @@
       "metadata": {
         "id": "iWhnzsJGYUCO"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
